Fixed a few rendering bugs and added more scoop colors
* Fixed a bug that was preventing the site logo from rendering
* Fixed a bug that was causing empty scoops to render
* Added error handling for repos with more than 4 repos. (When a 5 repo FroYo was built, it was too tall for the canvas). Maybe I'll add support for 5+ language repos one day... just not today
* Updated README

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ hr {
   border-color: white;
 }
 
-#error{
+#errorDiv{
   margin-top: 15px;
   display: none;
 }
